# OpenGL-Linux

./: .gitignore  CMakeLists.txt  README.md
src/: ball.cpp  ball.h  imgui.ini  importer.cpp  model.h  object.cpp  object.h  particle.cpp  particle.h  particleEmitter.cpp  particleEmitter.h  physics.cpp  physics.h
src/helpers/: predeclarations.h  softBodyVert.cpp  softBodyVert.h  threadPool.cpp  threadPool.h
src/main/: board.cpp  board.h  main.cpp
src/objects/: ball.cpp  ball.h  cone.cpp  cone.h  fireworkEmitter.cpp  fireworkEmitter.h  particle.cpp  particle.h  particleEmitter.cpp  particleEmitter.h  rectangular.cpp  rectangular.h  snowEmitter.cpp  snowEmitter.h  softRectangular.cpp  softRectangular.h
src/opengl/: GUIDrawn.cpp  GUIDrawn.h  camera.cpp  camera.h  importer.h  mesh.cpp  mesh.h  model.cpp  shaders.cpp  shaders.h  texture.cpp  texture.h
src/physics/: colliders.cpp  colliders.h  gameObject.cpp  gameObject.h  physics.cpp  physics.h  physicsBody.cpp  physicsBody.h  softBody.cpp  softBody.h
